Clean up (Hopefully)

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ Library/
 /Assets/Materials.meta
 /Assets/Anims.meta
 /.vs
+/Assets/Scripts - Copy.meta
+/Assets/Scripts - Copy/Player.meta
+/Assets/Scripts - Copy/Manager.meta
+/Assets/Scripts - Copy/AI.meta
